Relations amoung projects

--- a/MyFinances.Application/MyFinances.Application.csproj
+++ b/MyFinances.Application/MyFinances.Application.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyFinances.Common\MyFinances.Common.csproj" />
+    <ProjectReference Include="..\MyFinances.Domain\MyFinances.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
