--- a/MyFinances.Domain/MyFinances.Domain.csproj
+++ b/MyFinances.Domain/MyFinances.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyFinances.Common\MyFinances.Common.csproj" />
+  </ItemGroup>
+
 </Project>
