--- a/MyFinances.Infrastructure/MyFinances.Infrastructure.csproj
+++ b/MyFinances.Infrastructure/MyFinances.Infrastructure.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyFinances.Application\MyFinances.Application.csproj" />
+    <ProjectReference Include="..\MyFinances.Common\MyFinances.Common.csproj" />
+    <ProjectReference Include="..\MyFinances.Domain\MyFinances.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
