--- a/MyFinances.Domain/MyFinances.Domain.csproj
+++ b/MyFinances.Domain/MyFinances.Domain.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\MyFinances.Common\MyFinances.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\Finances\" />
+    <Folder Include="Entities\Clients\" />
+  </ItemGroup>
+
 </Project>
