--- a/MyFinances.Application/MyFinances.Application.csproj
+++ b/MyFinances.Application/MyFinances.Application.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MyFinances.Common\MyFinances.Common.csproj" />
     <ProjectReference Include="..\MyFinances.Domain\MyFinances.Domain.csproj" />
   </ItemGroup>
